gccida/g2/clear_edges
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:643:49: error: expected expression
for ( i = *( _QWORD *)( v1 + 40); i; *( _OWORD *)( v3 + 48) = 0LL ) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:643:41: error: use of undeclared identifier '_OWORD'
for ( i = *( _QWORD *)( v1 + 40); i; *( _OWORD *)( v3 + 48) = 0LL ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:648:12: error: expected expression
*( _OWORD *)v3 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:648:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v3 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:650:12: error: expected expression
*( _OWORD *)( v3 + 16) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:650:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 + 16) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:653:12: error: expected expression
*( _OWORD *)( v3 + 32) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:653:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 + 32) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:661:52: error: expected expression
for ( j = entry_exit_blocks[0].succ; j; *( _OWORD *)&v7->flags = 0LL ) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:661:44: error: use of undeclared identifier '_OWORD'
for ( j = entry_exit_blocks[0].succ; j; *( _OWORD *)&v7->flags = 0LL ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:666:12: error: expected expression
*( _OWORD *)&v7->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:666:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7->pred_next = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:668:12: error: expected expression
*( _OWORD *)&v7->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:668:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:671:12: error: expected expression
*( _OWORD *)&v7->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/cfg.c:671:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7->insns = 0LL; 
   ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_edges/src/obj/cfg.o] Error 1
